| Summary: | ASTERISK-30375: res_http_media_cache: Crash when URL has no path component. | ||
| Reporter: | Sean Bright (seanbright) | Labels: | |
| Date Opened: | 2022-12-23 14:18:26.000-0600 | Date Closed: | 2023-01-03 09:30:35.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_http_media_cache |
| Versions: | 18.15.0 20.0.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Asterisk will crash when a URL has no path component as in this case the ast_uri_path function will return NULL.
The below causes a crash: {noformat} *CLI> media cache create http://google.com /tmp/foo.wav {noformat} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-12-23 14:18:30.103-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2023-01-03 09:30:36.149-0600 Change 19717 merged by Friendly Automation: res_http_media_cache: Do not crash when there is no extension [https://gerrit.asterisk.org/c/asterisk/+/19717|https://gerrit.asterisk.org/c/asterisk/+/19717] By: Friendly Automation (friendly-automation) 2023-01-04 05:16:36.826-0600 Change 19760 merged by George Joseph: res_http_media_cache: Do not crash when there is no extension [https://gerrit.asterisk.org/c/asterisk/+/19760|https://gerrit.asterisk.org/c/asterisk/+/19760] By: Friendly Automation (friendly-automation) 2023-01-04 05:16:55.214-0600 Change 19761 merged by George Joseph: res_http_media_cache: Do not crash when there is no extension [https://gerrit.asterisk.org/c/asterisk/+/19761|https://gerrit.asterisk.org/c/asterisk/+/19761] | ||